--- a/src/style.css
+++ b/src/style.css
@@ -93,7 +93,7 @@ a {
     opacity: 1;
 }
 
-/*About CSS*/
+/* About CSS */
 
 /* Animation */
 @keyframes fadeIn {
@@ -107,8 +107,23 @@ a {
     }
 }
 
-.animate__animated.animate__fadeIn {
-    animation: fadeIn 1.5s ease-in-out;
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    to {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+}
+
+.animate__fadeIn {
+    animation: fadeIn 1.5s ease-in-out forwards;
+}
+
+.animate__fadeOut {
+    animation: fadeOut 1.5s ease-in-out forwards;
 }
 
 .name {
@@ -275,10 +290,92 @@ li > span {
     transform: translateY(0); /* Final state for animation */
 }
 
-/*Awards CSS*/
+
+/* Projects CSS */
+#projects .container {
+    max-width: 1200px; /* Adjust to match other sections */
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+#projects .card {
+    background-color: rgba(0, 0, 0, 0.7);
+    border: none;
+    border-radius: 10px;
+    overflow: hidden;
+    position: relative;
+    cursor: pointer;
+    opacity: 0; /* Initially hidden */
+    transform: translateY(100px); /* Initially moved down */
+    transition: opacity 0.3s ease, transform 0.3s ease;
+}
+
+#projects .card.in-view {
+    opacity: 1; /* Fade in */
+    transform: translateY(0); /* Slide in */
+}
+
+#projects .card:hover {
+    transform: scale(1.05);
+}
+
+
+#projects .card .project-thumbnail {
+    opacity: 0.7;
+    height: 280px;
+    object-fit: fill;
+}
+
+#projects .card:hover .project-thumbnail {
+    opacity: 1;
+}
+
+
+#projects .card-body {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    color: white;
+    transition: height 0.3s ease, padding 0.3s ease;
+}
+
+#projects .card-title, #projects .card-text {
+    margin: 0;
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    transition: all 0.3s ease;
+}
+
+#projects .card:hover .card-title, #projects .card:hover .card-text {
+    white-space: normal;
+    overflow: visible;
+    text-overflow: clip;
+}
+
+#projects .card .card-description {
+    display: none;
+    margin-top: 10px;
+    transition: opacity 0.3s ease;
+}
+
+#projects .card:hover .card-description {
+    display: block;
+    opacity: 1;
+}
+
+@media (max-width: 768px) {
+    #projects .card {
+        margin-bottom: 20px;
+    }
+}
+
+
+/* Awards CSS */
 .award-container {
-    width: 80%;
-    margin-left: 10%;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .left-a {
@@ -289,8 +386,87 @@ li > span {
     font-size: 16px;
 }
 
+.award-item {
+    opacity: 0;
+    transform: translateX(100%);
+    transition: opacity 0.6s ease-out, transform 0.6s ease-out;
+}
+
+.award-item.in-view {
+    opacity: 1;
+    transform: translateX(0);
+}
+
+/* Contact CSS */
 .form-container {
     width: 45%;
     margin-left: auto;
     margin-right: auto;
 }
+
+/* Animation */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes fadeOut {
+    from {
+        opacity: 1;
+        transform: translateY(0);
+    }
+    to {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+}
+
+.animate__fadeIn {
+    animation: fadeIn 1.5s ease-in-out forwards;
+}
+
+.animate__fadeOut {
+    animation: fadeOut 1.5s ease-in-out forwards;
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+    .form-container {
+        width: 100%;
+    }
+
+    .description {
+        font-size: 1rem;
+    }
+}
+
+/* Heading Animation */
+@keyframes fadeIn {
+    from {
+        opacity: 0;
+        transform: translateY(20px);
+    }
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+.fade-in {
+    opacity: 0;
+    transform: translateY(20px);
+    transition: opacity 0.8s ease, transform 0.9s ease;
+}
+
+.in-view {
+    opacity: 1;
+    transform: translateY(0);
+}
+
+
